update rprof demo with many more comments and examples, cleaned rprof-widget and updated paths

--- a/Demos/rprofile-widget.ipynb
+++ b/Demos/rprofile-widget.ipynb
@@ -16,108 +16,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "# sys.path.insert(1,'/user/scratch14_csa/fherwig/repos/PyPPM')\n",
-    "# sys.path.insert(1,'/user/scratch14_ppmstar-lcse/fherwig/PyPPM')"
+    "%pylab ipympl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pylab ipympl\n",
-    "from ppmpy import ppm"
+    "import sys, os\n",
+    "sys.path.insert(1, '/user/scratch14_csa/fherwig/repos/PyPPM') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ppmpy import ppm   # github version v0.92 (Nov 26, 2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify path to rprofs\n",
-    "path1 = '/data/ASDR/PPMstar/H-core-M25/M29-768/rprofs'\n",
-    "path2 = '/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs'"
+    "cases = ['M36-100x-768',  'M37-10000x-768']\n",
+    "dir_repo    = '/data/ASDR/PPMstar'\n",
+    "dir_project = 'H-core-M25'\n",
+    "path1 = os.path.join(dir_repo,dir_project,cases[0],'prfs') \n",
+    "path1 = os.path.join(dir_repo,dir_project,cases[1],'prfs') \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2413 rprof files found in '/data/ASDR/PPMstar/H-core-M25/M29-768/rprofs/.\n",
-      "Dump numbers range from 0 to 2412.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cb08eea20a34df9a294d40a3e64353d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=80, description='dump1', max=2413), IntSlider(value=2372, description='d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "help(rp1.rprofgui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "rp1 = ppm.RprofSet(path1)\n",
-    "rp1.rprofgui(ifig=1)"
+    "rp1.rprofgui(ifig=1)\n",
+    "title(cases[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "437 rprof files found in '/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs/.\n",
-      "Dump numbers range from 0 to 436.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01929a8bea654b34879dbc38ae10671b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=14, description='dump1', max=436), IntSlider(value=428, description='dum…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rp2 = ppm.RprofSet(path2)\n",
-    "rp2.rprofgui(ifig=2)"
+    "rp1.rprofgui(ifig=2)\n",
+    "title(cases[1])"
    ]
   },
   {
@@ -127,83 +94,24 @@
     "## Manual plot\n",
     "Example of how to plot radial profiles from two runs. \n",
     "1. Select a variable to plot.\n",
-    "2. Use the `rp_plot` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['FV', 'FV0', 'P0', 'P1', 'R', 'Rho0', 'Rho1', 'T9']"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# the available rprof columns can be querried with this function (it is oddly associated \n",
-    "# with a particular dump object)\n",
+    "2. Use the `rp_plot` method.\n",
     "\n",
-    "#rp1.get_dump(0).get_hr_variables()  # for high-res columns\n",
-    "#rp1.get_dump(0).get_lr_variables()  # for low-res columns\n"
+    "For more examples of using RProf files see `PPMnotebooks/Demos/rprof_demo.ipynb` (on [github.com/PPMstar/PPMnotebooks](https://github.com/PPMstar/PPMnotebooks))."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureCanvasNbAgg()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9c923d77abf4f40922e77f486fbd689",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureCanvasNbAgg()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/scratch14_ppmstar-lcse/fherwig/PyPPM/ppmpy/ppm.py:9334: RuntimeWarning: divide by zero encountered in log10\n",
-      "  yquantity = np.log10(yquantity)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ifig=12;close(ifig);figure(ifig)\n",
     "dumps = list(range(200,401,200))\n",
-    "labels = ['M29','M35']\n",
+    "labels = cases\n",
     "yvar = 'FV'\n",
     "rp1.rp_plot(dumps,yvar,ifig=ifig,logy=True,runlabel=labels[0])\n",
     "rp2.rp_plot(dumps,yvar,ifig=ifig,logy=True,yylim=(-3,0.1),\\\n",
-    "                  xxlim=(0,2000),newfig=False,idn=1,runlabel=labels[0])\n"
+    "                  xxlim=(0,2000),newfig=False,idn=1,runlabel=labels[1])\n"
    ]
   },
   {
@@ -230,9 +138,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
