update parameters in widget

--- a/Demos/rprofile-widget.ipynb
+++ b/Demos/rprofile-widget.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook should work with the \"latest\" PPMstar astrohub image. Select local PyPPM version below only needed for testing."
+    "This notebook should work with PPMstarHub image `>=1.2.5`. "
    ]
   },
   {
@@ -29,17 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "sys.path.insert(1, '/user/scratch14_csa/fherwig/repos/PyPPM') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ppmpy import ppm   # github version v0.92 (Nov 26, 2019)"
+    "from ppmpy import ppm   # github version v0.92 (Nov 26, 2019)\n",
+    "import os"
    ]
   },
   {
@@ -53,16 +44,7 @@
     "dir_repo    = '/data/ASDR/PPMstar'\n",
     "dir_project = 'H-core-M25'\n",
     "path1 = os.path.join(dir_repo,dir_project,cases[0],'prfs') \n",
-    "path1 = os.path.join(dir_repo,dir_project,cases[1],'prfs') \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(rp1.rprofgui)"
+    "path2 = os.path.join(dir_repo,dir_project,cases[1],'prfs') \n"
    ]
   },
   {
