Update Mollweide_gui and Slice_gui

--- a/Demos/Mollweide_gui.ipynb
+++ b/Demos/Mollweide_gui.ipynb
@@ -38,10 +38,11 @@
     }
    ],
    "source": [
+    "import os\n",
     "import sys\n",
     "import inspect\n",
     "import logging\n",
-    "import collections\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "# if you make changes to the ppmpy module (e.g. add your analysis methods via a pull \n",
     "# request) in the https://github.com/PPMstar/PyPPM repo you may want use that \n",
@@ -60,6 +61,57 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7841f15d3b1c44b2870b1842772913b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('LowZRAWD/N16-LowZRA…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "base_dir = os.getcwd() + '/data/ASDR/PPMstar/'\n",
+    "root_dirs = os.listdir(base_dir)\n",
+    "options =[]\n",
+    "\n",
+    "for sub_dir in root_dirs:\n",
+    "    if (os.path.isdir(base_dir + sub_dir)):\n",
+    "        data_dirs = os.listdir(base_dir + sub_dir)\n",
+    "        for folder in data_dirs:\n",
+    "            if (os.path.isdir(base_dir + sub_dir + '/' + folder)):\n",
+    "                full_dir = base_dir + sub_dir + '/' + folder\n",
+    "                if (os.path.exists(full_dir + '/prfs') and os.path.exists(full_dir + '/myavsbq')):\n",
+    "                    if ((os.listdir(full_dir + '/prfs') != []) and (os.listdir(full_dir + '/myavsbq') != [])):\n",
+    "                        options.append(full_dir)\n",
+    "\n",
+    "select_dropdown = widgets.Dropdown(options=options, description=\"Path Select\", layout=widgets.Layout(width='450px'))\n",
+    "select_button = widgets.Button(description=\"Select Runs\", disabled=False)\n",
+    "selected_label = widgets.Label(value=\"\")\n",
+    "select_group = widgets.VBox([select_dropdown, select_button, selected_label])\n",
+    "\n",
+    "def select(b):\n",
+    "    global rprof_dir\n",
+    "    global moms_dir\n",
+    "    rprof_dir = select_dropdown.value + '/prfs/'\n",
+    "    moms_dir = select_dropdown.value + '/myavsbq/'\n",
+    "    selected_label.value = select_dropdown.value\n",
+    "select_button.on_click(select)\n",
+    "\n",
+    "display(select_group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -68,48 +120,11 @@
       "1616 .aaa files found in '/data/ASDR/PPMstar/LowZRAWD/N16-LowZRAWD-1536-10x-burn-moms/myavsbq/.\n",
       "Dump numbers range from 0 to 1615.\n"
      ]
-    }
-   ],
-   "source": [
-    "# load in data, use LowZRAWD N16\n",
-    "rprof_dir = '/data/ASDR/PPMstar/LowZRAWD/N16-LowZRAWD-1536-10x-burn-moms/prfs/'\n",
-    "moms_dir = '/data/ASDR/PPMstar/LowZRAWD/N16-LowZRAWD-1536-10x-burn-moms/myavsbq'\n",
-    "\n",
-    "# get rprof and moms datasets\n",
-    "rprof_data = ppm.RprofSet(rprof_dir)\n",
-    "moms_data = ppm.MomsDataSet(moms_dir, 0, rprofset=rprof_data)\n",
-    "\n",
-    "# define 'hydro' and get n16 data\n",
-    "hydro = collections.namedtuple('hydro', ['moms','rprof'])\n",
-    "n16 = hydro(moms_data, rprof_data)\n",
-    "\n",
-    "# load constants\n",
-    "constants = {\n",
-    "    'atomicnoH': 1.,\n",
-    "    'atomicnocld': n16.rprof.get('atomicnocld',fname=0),\n",
-    "    'fkcld': n16.rprof.get('fkcld',fname=0),\n",
-    "    'airmu': n16.rprof.get('airmu',fname=0),\n",
-    "    'cldmu': n16.rprof.get('cldmu',fname=0)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/user/scratch14_ppmstar/bamcewan/repos/PyPPM/ppmpy/ppm.py:12100: RuntimeWarning: invalid value encountered in log\n",
-      "  plot_val = np.log(plot_val)\n"
-     ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "982054d29cdc40ea8acebfd819a78125",
+       "model_id": "95db8723809942ae828ae5129902d8c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,20 +138,32 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5faf0d42d8c24bbea041e8375d773594",
+       "model_id": "d157f89b81c9482cac885328ebf17edc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output()"
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/matplotlib/projections/geo.py:414: RuntimeWarning: invalid value encountered in arcsin\n",
+      "  theta = np.arcsin(y / np.sqrt(2))\n"
+     ]
     }
    ],
    "source": [
-    "n16.moms.mollweide_gui(constants)"
+    "#get rprof and moms data\n",
+    "rprof_data = ppm.RprofSet(rprof_dir)\n",
+    "moms_data = ppm.MomsDataSet(moms_dir, 100, rprofset=rprof_data)\n",
+    "\n",
+    "moms_data.mollweide_gui()"
    ]
   },
   {
