--- a/Demos/Slice_gui.ipynb
+++ b/Demos/Slice_gui.ipynb
@@ -38,13 +38,11 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as color\n",
-    "import nugridpy.utils as utils\n",
-    "import sys, os, time\n",
+    "import os\n",
+    "import sys\n",
     "import inspect\n",
+    "import logging\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "# if you make changes to the ppmpy module (e.g. add your analysis methods via a pull \n",
     "# request) in the https://github.com/PPMstar/PyPPM repo you may want use that \n",
@@ -56,104 +54,59 @@
     "from ppmpy import ppm\n",
     "print(inspect.getfile(ppm))\n",
     "\n",
-    "cb = utils.linestylecb # colours"
+    "# turn off matplotlib messages\n",
+    "logging.getLogger(\"matplotlib\").setLevel(logging.CRITICAL)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import logging\n",
-    "l = logging.getLogger()\n",
-    "l.setLevel(logging.ERROR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HcoreM025Z0-BQav2650.aaa\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42304c0d6a32447bbb4bfbb422d7b650",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('/home/user/data/ASD…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "%%bash\n",
-    "ls /data/ASDR/PPMstar/H-core-M25/M45/myavsbq/2650"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000 rprof files found in '/data/ASDR/PPMstar/H-core-M25/M45/prfs/.\n",
-      "Dump numbers range from 0 to 9999.\n",
-      "10000 .aaa files found in '/data/ASDR/PPMstar/H-core-M25/M45/myavsbq/.\n",
-      "Dump numbers range from 0 to 9999.\n",
-      "moms and rprof dictionary created\n"
-     ]
-    }
-   ],
-   "source": [
-    "dir_repo    = '/data/ASDR/PPMstar'\n",
-    "dir_project = 'H-core-M25/'\n",
-    "rprof = {}; moms = {}         # initialize dictionaries to hold rprof and moms instances\n",
+    "base_dir = os.getcwd() + '/data/ASDR/PPMstar/'\n",
+    "root_dirs = os.listdir(base_dir)\n",
+    "options =[]\n",
     "\n",
-    "moms_dumps = {}\n",
+    "for sub_dir in root_dirs:\n",
+    "    if (os.path.isdir(base_dir + sub_dir)):\n",
+    "        data_dirs = os.listdir(base_dir + sub_dir)\n",
+    "        for folder in data_dirs:\n",
+    "            if (os.path.isdir(base_dir + sub_dir + '/' + folder)):\n",
+    "                full_dir = base_dir + sub_dir + '/' + folder\n",
+    "                if (os.path.exists(full_dir + '/prfs') and os.path.exists(full_dir + '/myavsbq')):\n",
+    "                    if ((os.listdir(full_dir + '/prfs') != []) and (os.listdir(full_dir + '/myavsbq') != [])):\n",
+    "                        options.append(full_dir)\n",
     "\n",
-    "runs                = ['M45'] # select runs\n",
-    "moms_dumps[runs[0]] = 2100   # select dump numbers for moms\n",
+    "select_dropdown = widgets.Dropdown(options=options, description=\"Path Select\", layout=widgets.Layout(width='450px'))\n",
+    "select_button = widgets.Button(description=\"Select Runs\", disabled=False)\n",
+    "selected_label = widgets.Label(value=\"\")\n",
+    "select_group = widgets.VBox([select_dropdown, select_button, selected_label])\n",
     "\n",
-    "add_highres = False\n",
-    "if add_highres:\n",
-    "    runs.append('M35-1536')\n",
-    "    moms_dumps[runs[1]] = 375   \n",
+    "def select(b):\n",
+    "    global rprof_dir\n",
+    "    global moms_dir\n",
+    "    rprof_dir = select_dropdown.value + '/prfs/'\n",
+    "    moms_dir = select_dropdown.value + '/myavsbq/'\n",
+    "    selected_label.value = select_dropdown.value\n",
+    "select_button.on_click(select)\n",
     "\n",
-    "# rprof instance holds radial profiles for all dumps\n",
-    "# moms instance holds only one dump at a time\n",
-    "for run in runs:        \n",
-    "    path = os.path.join(dir_repo,dir_project,run)\n",
-    "    # radial profile:\n",
-    "    rprof[run] = ppm.RprofSet(os.path.join(path,'prfs'))\n",
-    "    moms[run] = ppm.MomsDataSet(os.path.join(path,'myavsbq'),moms_dumps[run])\n",
-    "print(\"moms and rprof dictionary created\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'M45': 2100}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(moms_dumps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runid = 'M45'"
+    "display(select_group)"
    ]
   },
   {
@@ -165,18 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "437 rprof files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs/.\n",
+      "Dump numbers range from 0 to 436.\n",
+      "438 .aaa files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/myavsbq/.\n",
+      "Dump numbers range from 0 to 437.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed9548566f634fe598ea2c9aa0b4d823",
+       "model_id": "caa81ba233d44010b9c3b045b00d1330",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=6666, description='Dump', layout=Layout(width='335…"
+       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=291, description='Dump', layout=Layout(width='335p…"
       ]
      },
      "metadata": {},
@@ -185,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7cf02bb909249d8a1f823204006cc64",
+       "model_id": "d071f0f9ef4c485396ad26e10ea550ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,8 +161,11 @@
     }
    ],
    "source": [
-    "thismoms = moms[runid]\n",
-    "thismoms.slice_gui()"
+    "#get rprof and moms data\n",
+    "rprof_data = ppm.RprofSet(rprof_dir)\n",
+    "moms_data = ppm.MomsDataSet(moms_dir, 100, rprofset=rprof_data)\n",
+    "\n",
+    "moms_data.slice_gui()"
    ]
   },
   {
