Update demo notebooks for slice_gui and mollweide_gui

--- a/Demos/Mollweide_gui.ipynb
+++ b/Demos/Mollweide_gui.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,18 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7841f15d3b1c44b2870b1842772913b4",
+       "model_id": "50fb8464185d4c46aa340f171754583e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('LowZRAWD/N16-LowZRA…"
+       "VBox(children=(Dropdown(description='Path Select', layout=Layout(width='450px'), options=('/home/user/data/ASD…"
       ]
      },
      "metadata": {},
@@ -78,7 +78,7 @@
    "source": [
     "base_dir = os.getcwd() + '/data/ASDR/PPMstar/'\n",
     "root_dirs = os.listdir(base_dir)\n",
-    "options =[]\n",
+    "options = []\n",
     "\n",
     "for sub_dir in root_dirs:\n",
     "    if (os.path.isdir(base_dir + sub_dir)):\n",
@@ -107,29 +107,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mollweide Gui: How to use guide\n",
+    "1) Select the path to the data you wish to examine in dropdown above\\\n",
+    "2) Click the `Select Runs` button above\\\n",
+    "3) Run the block below to initialize the `Mollweide Gui` for those runs of data\n",
+    "\n",
+    "There are 5 sets of controls below in the `Graph Settings` tab, they are the following:\n",
+    "- Dump, selects the dump number of the data set\n",
+    "- Radius, selected the radius from the center of the start to take the shell which will be projected to the mollweide plot\n",
+    "- Quantity, there are 6 quantities examinable in this GUI. To see which quanties these are see line 12157 of ppm.py\n",
+    "- Log Value Range/Value Range. Log Value Range applies a limit to the maximum and minimum values logged within the selected data symetrically about the zero and then offsets by log10(min). Value Range just limits the range of unlogged data to show, this will automatically go to min/max of the selected data when switched to from log or when the quantity is switched.\n",
+    "\n",
+    "There are 3 different types of controls in the `Colour Picker` tab\n",
+    "- Colours dropdown, this dropdown selects the number of colours to include on the colour map for the graph\n",
+    "- Individual colours, these pickers open up a palet when clicked on to allow the user to select the exact colour desired\n",
+    "- Range sliders, each with a range from 0 to 1 with the first non-greyed out colour being set to 0 and the last being set to 1. 0 is the bottom of the colour mapping bar right of the graph and 1 is the top, the user can arrange colours however they choose between these set points."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1618 rprof files found in '/data/ASDR/PPMstar/LowZRAWD/N16-LowZRAWD-1536-10x-burn-moms/prfs/.\n",
-      "Dump numbers range from 0 to 1617.\n",
-      "1616 .aaa files found in '/data/ASDR/PPMstar/LowZRAWD/N16-LowZRAWD-1536-10x-burn-moms/myavsbq/.\n",
-      "Dump numbers range from 0 to 1615.\n"
+      "437 rprof files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/prfs/.\n",
+      "Dump numbers range from 0 to 436.\n",
+      "438 .aaa files found in '/home/user/data/ASDR/PPMstar/H-core-M25/M35-1536/myavsbq/.\n",
+      "Dump numbers range from 0 to 437.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95db8723809942ae828ae5129902d8c2",
+       "model_id": "d82ddb4b64844db698248b3b760a6012",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=1076, continuous_update=False, description='Dump',…"
+       "Tab(children=(HBox(children=(VBox(children=(IntSlider(value=291, continuous_update=False, description='Dump', …"
       ]
      },
      "metadata": {},
@@ -138,7 +159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d157f89b81c9482cac885328ebf17edc",
+       "model_id": "8575354ab85f4d3b9c6467873b4e370c",
        "version_major": 2,
        "version_minor": 0
       },
