--- a/Demos/Slice_gui.ipynb
+++ b/Demos/Slice_gui.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tomography movie"
+    "# Slice Gui"
    ]
   },
   {
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42304c0d6a32447bbb4bfbb422d7b650",
+       "model_id": "4ad188e0f58e4034a098a5d736f6496c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Slice_Gui"
+    "## Slice Gui: How to use guide\n",
+    "1) Select the path to the data you wish to examine in dropdown above\\\n",
+    "2) Click the `Select Runs` button above\\\n",
+    "3) Run the block below to initialize the `Slice Gui` for those runs of data\\\n",
+    "\n",
+    "There are 5 sets of controls below in the `Graph Settings` tab, they are the following:\n",
+    "- Dump, selects the dump number of the data set\n",
+    "- Slice, selects the location of the slice on the selected Slice plane. For 192 cubed data for example, the middle of the star will be at Slice 91\n",
+    "- Quantity, there are 10 quantities examinable in this GUI. To see which quanties these are see line 11769 of ppm.py\n",
+    "- Slice plane, axis in which to take slices upon\n",
+    "- Log Value Range/Value Range. Log Value Range applies a limit to the maximum and minimum values logged within the selected data symetrically about the zero and then offsets by log10(min). Value Range just limits the range of unlogged data to show, this will automatically go to min/max of the selected data when switched to from log or when the quantity is switched."
    ]
   },
   {
@@ -134,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caa81ba233d44010b9c3b045b00d1330",
+       "model_id": "34b5dd4e635e40d1a57237cb189624a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d071f0f9ef4c485396ad26e10ea550ac",
+       "model_id": "c2b7325259074d749e40d0ad3cb39f5b",
        "version_major": 2,
        "version_minor": 0
       },
