updating a couple of notebooks checking and marking them as working with ppmstarh

--- a/Demos/MomsData_Demo.ipynb
+++ b/Demos/MomsData_Demo.ipynb
@@ -9,6 +9,9 @@
     "\n",
     "This notebook contains a demonstration how to analyse the 3D filtered _moms_ data with the 1D radial profile _rprof_ data from _PPMstar_ 3D hydrodynamic simulations. \n",
     "\n",
+    "This notebook works with ppmstarhub:1.2.6 on [Astrohub](https://astrohub.uvic.ca) and on [PPMstar.org](https://astrohub.ppmstar.org)\n",
+    "\n",
+    "\n",
     "### Data for this demo\n",
     "The examples are for the project `H-core-M25` (this is the project identifier), the H-core convection simulations of a 25M$_\\odot$ star. \n",
     "\n",
@@ -29,7 +32,7 @@
     "\n",
     "### Python asumptions\n",
     "\n",
-    "The server defaults each notebook to `%pylab ipympl`"
+    "The server defaults each notebook to ``"
    ]
   },
   {
@@ -38,8 +41,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## use this for final run to export with images to pdf, markdown or html\n",
-    "#%pylab inline"
+    "%pylab inline\n",
+    "\n",
+    "# Some plot cells do not work with \n",
+    "# %pylab ipympl   "
    ]
   },
   {
@@ -606,13 +611,6 @@
     "\n",
     "ax.legend(frameon=False,fontsize=8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -631,9 +629,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
