--- a/O-shell_Jones+17/plot_diffusion_analysis.ipynb
+++ b/O-shell_Jones+17/plot_diffusion_analysis.ipynb
@@ -4,22 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Diffusion Analysis"
+    "# Diffusion Analysis\n",
+    "\n",
+    "This notebook works with ppmstarhub:1.2.6 on [Astrohub](https://astrohub.uvic.ca) and on [PPMstar.org](https://astrohub.ppmstar.org)\n",
+    "\n",
+    "This notebook analysis PPMstar1 data. The diffusion analysis has been updated since the Jones et al. 2017 paper.\n",
+    "\n",
+    "Jones S, Andrássy R, Sandalski S, Davis A, Woodward P, Herwig F. 2017. Idealized hydrodynamic simulations of turbulent oxygen-burning shell convection in 4pi geometry. MNRAS. 465(3):2991–3010\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab ipympl\n",
     "from ppmpy import ppm\n",
@@ -33,46 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading attributes from file  YProfile-01-0348.bobaaa\n",
-      "There are 349 YProfile files in the /data/ASDR/PPMstar/rpod2_PPMstar/YProfiles/O-shell-M25//D1 directory.\n",
-      "Ndump values range from 0 to 348\n",
-      "Time values range from 0.0 to 3480.0\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2411f0e60e14423b408bfcc93eb464a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FigureCanvasNbAgg()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(7, 15)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture  --no-stdout --no-display\n",
     "D1 = ppm.yprofile('D1')\n",
@@ -84,36 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading attributes from file  YProfile-01-0163.bobaaa\n",
-      "There are 164 YProfile files in the /data/ASDR/PPMstar/rpod2_PPMstar/YProfiles/O-shell-M25/D2 directory.\n",
-      "Ndump values range from 0 to 163\n",
-      "Time values range from 0.0 to 1640.0\n",
-      "1386 in profiles.index file ...\n",
-      "Found and load nearest profile for cycle 28900\n",
-      "reading profile/data/ASDR/CSA/Stellar_models/O-shell-M25/M25Z0.02//LOGS/log593.data ...\n",
-      " reading ...100% \n",
-      "\n",
-      "Closing profile tool ...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9b24419780>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%capture  --no-stdout --no-display\n",
     "ppm.plot_diffusion_profiles('D2',data_dir + 'Stellar_models/O-shell-M25/M25Z0.02/',28900,\n",
@@ -147,9 +81,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
